tests/baselines/reference/decoratorMetadataWithImportDeclarationNameCollision8(strict=true).errors.txt
service.ts(2,24): error TS7006: Parameter 'target' implicitly has an 'any' type.


==== service.ts (1 errors) ====
    import database = require('./db');
    function someDecorator(target) {
                           ~~~~~~
!!! error TS7006: Parameter 'target' implicitly has an 'any' type.
        return target;
    }
    @someDecorator
    class MyClass {
        db: database.db;
    
        constructor(db: database.db) { // no collision
            this.db = db;
            this.db.doSomething();
        }
    }
    export {MyClass};
    
==== db.ts (0 errors) ====
    export class db {
        public doSomething() {
        }
    }
    